# chbr

./: .clippy.toml  .gitignore  Cargo.toml  array_lc_string.native  json.native  tuple.native
benches/: README.md  refs.rs
src/: conv.rs  error.rs  index.rs  iterators.rs  lib.rs  macros.rs  mark.rs  marker.rs  parse.rs  parse_type.rs  slice.rs  types.rs  value.rs
src/parse/: block.rs  column.rs  header.rs  mod.rs  typ.rs
test_data/: array.native  array_in_array_in64.native  array_lc_nullable_string.native  array_map_sample.native  array_nullable_int64.native  array_of_nested.native  array_of_tuples.native  bool_array_sample.native  decimal_sample.native  dynamic.native  enums_sample.native  events.native  ip_sample.native  json_arr.native  map_nullable_lc_string.native  map_sample.native  nullable_string.native  nullable_string_array.native  plain_lc_string.native  plain_strings.native  plain_strings.rb  plain_strings_array.native  sample.native  uuid_and_dates.native  variant.native
testdata/: README.md  activity_hw.native  array_lc_string.native  array_lc_string_empty.native  bfloat16_array_sample.native  dynamic_arr.native  enums_array_sample.native  fixed_string_array.native  fixed_string_sample.native  float_sample.native  geo_sample.native  json.native  map_in_map.native  metric_activity.native  nullable_lc_str.native  sample_128.native  simple_nested.native  sql_data.sql  variant_arr.native
tests/: main.rs
