[package]
name = "chbr"
version = "0.1.0"
edition = "2024"

[dependencies]
unsigned-varint = { version = "0.8", features = ["std"] }
thiserror = "2"
chrono = "0.4"
chrono-tz = "0.10"
nom = { version = "8", features = ["std"] }
zerocopy = { version = "0.8", features = ["std", "derive"] }
log = "0.4"
once_cell = "1.21.3"
env_logger = "0.11.8"
rust_decimal = "1.37.1"
uuid = { version = "1.16", features = ["v4"] }
half = { version = "2.6", features = ["zerocopy"] }

[dev-dependencies]
testresult = "0.4"
pretty_assertions = "1.4"
clickhouse = { git = "https://github.com/night-crawler/clickhouse-rs", branch = "main", features = ["chrono", "uuid"] }
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1", features = ["default", "derive"] }
criterion = "0.6"

[[test]]
name = "tests"
path = "tests/main.rs"

[[bench]]
name = "refs"
harness = false

[lints]
clippy.as_pointer_underscore = "deny"
clippy.as_underscore = "deny"
clippy.borrow_as_ptr = "deny"
clippy.cast_lossless = "deny"
clippy.cast_possible_truncation = "deny"
clippy.cast_possible_wrap = "deny"
clippy.cast_ptr_alignment = "deny"
clippy.cast_sign_loss = "deny"
clippy.clone_on_ref_ptr = "deny"
clippy.cloned_instead_of_copied = "deny"
clippy.comparison_chain = "deny"
clippy.debug_assert_with_mut_call = "deny"
clippy.elidable_lifetime_names = "deny"
clippy.enum_glob_use = "deny"
clippy.equatable_if_let = "deny"
clippy.explicit_into_iter_loop = "deny"
clippy.explicit_iter_loop = "deny"
clippy.filter_map_next = "deny"
clippy.flat_map_option = "deny"
clippy.format_collect = "deny"
clippy.format_push_string = "deny"
clippy.ignored_unit_patterns = "deny"
clippy.implicit_clone = "deny"
clippy.inefficient_to_string = "deny"
clippy.items_after_statements = "deny"
clippy.iter_on_empty_collections = "deny"
clippy.iter_on_single_items = "deny"
clippy.iter_with_drain = "deny"
clippy.manual_is_variant_and = "deny"
clippy.manual_let_else = "deny"
clippy.manual_midpoint = "deny"
clippy.match_same_arms = "deny"
clippy.multiple_inherent_impl = "deny"
clippy.or_fun_call = "deny"
clippy.rc_buffer = "deny"
clippy.redundant_closure_for_method_calls = "deny"
clippy.redundant_pub_crate = "deny"
clippy.ref_option = "deny"
clippy.ref_option_ref = "deny"
clippy.str_to_string = "deny"
clippy.string_to_string = "deny"
clippy.suboptimal_flops = "deny"
clippy.uninlined_format_args = "allow"
clippy.unnecessary_self_imports = "deny"
clippy.unneeded_field_pattern = "deny"
clippy.unnested_or_patterns = "deny"
clippy.unused_trait_names = "deny"
rust.unfulfilled_lint_expectations = "deny"
